infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template: # Each individual pod that this template is going to create
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo # Official hosted mongo image from docker hub
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo # Which deployments that can access this service
  ports:
    - name: db
      protocol: TCP
      port: 27017 # Default port for mongo
      targetPort: 27017
