infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template: # Each individual pod that this template is going to create
    metadata:
      labels:
        app: client
    spec: # How every pod behaves
      containers:
        - name: client
          image: us.gcr.io/ticketing-dev-302807/client
          env: # Env. variables accessiable in the container
            - name: JWT_KEY
              valueFrom:
                secretKeyRef:
                  name: jwt-secret
                  key: JWT_KEY
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
