infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # Tell the ingress controller that we are trying to feed it some routing rules
    nginx.ingress.kubernetes.io/use-regex: "true" # Enable regex in order to use query params
spec:
  rules:
    - host: ticketing.dev #Made-up domain name that is only going to work on local machine
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
